--- a/mapify/tools/mapify.yaml
+++ b/mapify/tools/mapify.yaml
@@ -8,7 +8,7 @@ identity:
 description:
   human:
     en_US: Transform text, YouTube videos, and web content into beautiful mind maps using AI
-    zh_Hans: Transform text, YouTube videos, and web content into beautiful mind maps using AI
+    zh_Hans: 使用AI将文本、YouTube视频和网页内容转化为精美的思维导图
     pt_BR: Transform text, YouTube videos, and web content into beautiful mind maps using AI
   llm: Transform text, YouTube videos, and web content into beautiful mind maps using AI
 parameters:
@@ -17,13 +17,26 @@ parameters:
     required: true
     label:
       en_US: Query string
-      zh_Hans: 查询语句
+      zh_Hans: 查询内容
       pt_BR: Query string
     human_description:
-      en_US: Transform text, YouTube videos, and web content into beautiful mind maps using AI
-      zh_Hans: Transform text, YouTube videos, and web content into beautiful mind maps using AI
-      pt_BR: Transform text, YouTube videos, and web content into beautiful mind maps using AI
+      en_US: Enter text, YouTube link, or web URL to generate a mind map
+      zh_Hans: 输入文本、YouTube链接或网页URL生成思维导图
+      pt_BR: Enter text, YouTube link, or web URL to generate a mind map
     llm_description: Transform text, YouTube videos, and web content into beautiful mind maps using AI
+    form: llm
+  - name: language
+    type: string
+    required: false
+    label:
+      en_US: Language
+      zh_Hans: 语言
+      pt_BR: Language
+    human_description:
+      en_US: Output language (en for English, zh for Chinese)
+      zh_Hans: 输出语言（en为英文，zh为中文）
+      pt_BR: Output language (en for English, zh for Chinese)
+    llm_description: Output language (en for English, zh for Chinese)
     form: llm
 extra:
   python:
