--- a/provider/mapify.yaml
+++ b/provider/mapify.yaml
@@ -1,15 +1,27 @@
 identity:
-  author: matri
+  author: xmindltd
   name: mapify
   label:
-    en_US: mapify
-    zh_Hans: mapify
-    pt_BR: mapify
+    en_US: Mapify
+    zh_Hans: Mapify
+    pt_BR: Mapify
   description:
     en_US: Transform text, YouTube videos, and web content into beautiful mind maps using AI
     zh_Hans: 使用AI将文本、YouTube视频和网页内容转化为精美的思维导图
     pt_BR: Transform text, YouTube videos, and web content into beautiful mind maps using AI
   icon: icon.svg
+credentials_for_provider:
+  api_key:
+    type: secret-input
+    required: true
+    label:
+      en_US: API Key
+      zh_Hans: API密钥
+      pt_BR: API Key
+    human_description:
+      en_US: Enter your API key for the service
+      zh_Hans: 输入您的服务API密钥
+      pt_BR: Enter your API key for the service
 tools:
   - tools/mapify.yaml
 extra:
