--- a/.github/workflows/plugin-publish.yml
+++ b/.github/workflows/plugin-publish.yml
@@ -10,6 +10,15 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Configure Git
+        run: |
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git checkout main
+          git pull origin main
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -43,11 +52,9 @@ jobs:
 
       - name: Commit version update
         run: |
-          git config --local user.email "github-actions[bot]@users.noreply.github.com"
-          git config --local user.name "github-actions[bot]"
           git add manifest.yaml
           git commit -m "chore: update manifest version to ${{ github.ref_name }}"
-          git push
+          git push origin main
 
       - name: Print working directory
         run: |
