--- a/manifest.yaml
+++ b/manifest.yaml
@@ -52,6 +52,6 @@ meta:
     version: '3.12'
     entrypoint: main
   minimum_dify_version: null
-created_at: 2025-05-29 09:06:41.336792+08:00
+created_at: 2025-05-29T09:06:41.336792+08:00
 privacy: PRIVACY.md
 verified: false
